--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: default
 ---
 
 <div class="logo">
-    <p><img src="img/logo.png" alt="Ten Far West logo" /></p>
+    <p><img src="img/logo.png" alt="Praxis Efficax logo" /></p>
 </div>
