New index content

--- a/index.html
+++ b/index.html
@@ -2,6 +2,91 @@
 layout: default
 ---
 
-<div class="logo">
-    <p><img src="img/logo.png" alt="Praxis Efficax logo" /></p>
+<div class="main-content index-page">
+    <h1>About the Principal</h1>
+    <p>
+        My name is Bradford Fults and I have over 25 years of experience in
+        large-scale B2C and B2B enterprise organizations, in both
+        software-native and tech-enabled services businesses, and from the
+        smallest teams up to integrated cross-product portfolio delivery teams
+        of 1,000 people.
+    </p>
+    <p>
+        I bring a sharp eye, effective practices, and proven teaching and change
+        management methods to achieve the lasting change you seek in your
+        business, all the way to the balance sheet. I am an accomplished leader
+        of organizations and technically-minded engineer, able to quickly assess
+        both people and systems and then to forecast and integrate the
+        capabilities of product &amp; engineering with the rest of the business.
+    </p>
+
+    <h1>Approach</h1>
+    <ul>
+        <li>
+            I bring a <em>customer-driven</em> mindset to product development
+            and engineering (software &amp; hardware), focusing first and
+            foremost at how successfully your team is delivering actual results
+            to customers that power the engine of the business, in partnership
+            with your go-to-market teams.
+        </li>
+        <li>
+            I bring only <em>real-world</em> practices that have been used in
+            real businesses to get great results while running on real
+            budgets&mdash;no big-acronym frameworks or slick slide decks without
+            real effective methods behind them.
+        </li>
+    </ul>
+
+    <h1>Services</h1>
+    <div class="two-columns">
+        <section class="content-card">
+            <h2>Co-create a unified product vision with your team</h2>
+            <p></p>
+        </section>
+
+        <section class="content-card">
+            <h2>Co-create a technical vision with your engineering team</h2>
+            <p></p>
+        </section>
+
+        <section class="content-card">
+            <h2>Establish a product-first mindset across your teams</h2>
+            <p></p>
+        </section>
+
+        <section class="content-card">
+            <h2>Build feedback loops into your product &amp; processes</h2>
+            <p></p>
+        </section>
+
+        <section class="content-card">
+            <h2>Implement a lightweight product delivery process across product functions</h2>
+            <p></p>
+        </section>
+
+        <section class="content-card">
+            <h2>Coach leaders on writing &amp; delivering large-group communications</h2>
+            <p></p>
+        </section>
+
+        <section class="content-card">
+            <h2>Coach managers on leading career development</h2>
+            <p></p>
+        </section>
+
+        <section class="content-card">
+            <h2>Customize a career development framework for your company’s roles</h2>
+            <p></p>
+        </section>
+
+        <section class="content-card">
+            <h2>Assess your system architecture &amp; provide actionable next steps</h2>
+            <p></p>
+        </section>
+
+        <section class="content-card">
+            <h2>Implement a product reliability strategy &amp; improvement roadmap</h2>
+            <p></p>
+        </section>
+    </div>
 </div>
