Add more index page content

--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@ layout: default
 ---
 
 <div class="main-content index-page">
+    <h1>About the Firm</h1>
+    <p>
+        <em>Praxis Efficax LLC</em> is a digital services firm specializing in
+        product development, software engineering and organizational leadership.
+        Engaging with your company on a per-project or monthly fractional basis,
+        you can expect timely and significant results for your product
+        development teams.
+    </p>
+
     <h1>About the Principal</h1>
+    <figure class="headshot"><img src="img/bradford-headshot-square.jpg" alt="Bradford Fults’s head" width="180" height="180" /></figure>
     <p>
         My name is Bradford Fults and I have over 25 years of experience in
         large-scale B2C and B2B enterprise organizations, in both
         software-native and tech-enabled services businesses, and from the
         smallest teams up to integrated cross-product portfolio delivery teams
-        of 1,000 people.
+        of 1,000&nbsp;people.
     </p>
     <p>
         I bring a sharp eye, effective practices, and proven teaching and change
@@ -17,7 +27,8 @@ layout: default
         business, all the way to the balance sheet. I am an accomplished leader
         of organizations and technically-minded engineer, able to quickly assess
         both people and systems and then to forecast and integrate the
-        capabilities of product &amp; engineering with the rest of the business.
+        capabilities of product &amp; engineering with the rest of
+        the&nbsp;business.
     </p>
 
     <h1>Approach</h1>
@@ -25,15 +36,23 @@ layout: default
         <li>
             I bring a <em>customer-driven</em> mindset to product development
             and engineering (software &amp; hardware), focusing first and
-            foremost at how successfully your team is delivering actual results
+            foremost on how successfully your team is delivering actual results
             to customers that power the engine of the business, in partnership
-            with your go-to-market teams.
+            with your go-to-market&nbsp;teams.
         </li>
         <li>
             I bring only <em>real-world</em> practices that have been used in
-            real businesses to get great results while running on real
-            budgets&mdash;no big-acronym frameworks or slick slide decks without
-            real effective methods behind them.
+            real businesses to get great results while running on actual
+            budgets&#8202;&mdash;&#8202;no big-acronym frameworks or slick slide
+            decks without effective methods behind&nbsp;them.
+        </li>
+        <li>
+            I lead with a <em>people-centered</em> approach because the most
+            sustainable and effective teams are tightly-knit and trusting teams
+            with great leaders and excellent cross-functional relationships. It
+            is these teams who will deliver better products, more quickly, and
+            who will be more responsive to the needs of your customers and
+            the&nbsp;business.
         </li>
     </ul>
 
@@ -55,22 +74,22 @@ layout: default
         </section>
 
         <section class="content-card">
+            <h2>Implement a lightweight product delivery process across your product functions</h2>
+            <p></p>
+        </section>
+
+        <section class="content-card">
             <h2>Build feedback loops into your product &amp; processes</h2>
             <p></p>
         </section>
 
         <section class="content-card">
-            <h2>Implement a lightweight product delivery process across product functions</h2>
+            <h2>Coach your leaders on writing &amp; delivering large-group communications</h2>
             <p></p>
         </section>
 
         <section class="content-card">
-            <h2>Coach leaders on writing &amp; delivering large-group communications</h2>
-            <p></p>
-        </section>
-
-        <section class="content-card">
-            <h2>Coach managers on leading career development</h2>
+            <h2>Coach your managers on leading career development</h2>
             <p></p>
         </section>
 
@@ -80,7 +99,7 @@ layout: default
         </section>
 
         <section class="content-card">
-            <h2>Assess your system architecture &amp; provide actionable next steps</h2>
+            <h2>Assess your system architecture &amp; help build a technical roadmap</h2>
             <p></p>
         </section>
 
