Iteration on home page pitch

--- a/index.html
+++ b/index.html
@@ -2,33 +2,44 @@
 layout: default
 ---
 
-<div class="main-content index-page">
-    <h1>About the Firm</h1>
-    <p>
-        <em>Praxis Efficax LLC</em> is a digital services firm specializing in
-        product development, software engineering and organizational leadership.
-        Engaging with your company on a per-project or monthly fractional basis,
-        you can expect timely and significant results for your product
-        development teams.
-    </p>
+<article class="main-content index-page">
+    <dl class="starting-points">
+        <dt>
+            Are you seeing slow or incomplete deliverables from your development
+            teams?
+        </dt>
+        <dd>
+            We can work together to get all of your teams thinking with a
+            product-centric mindset, and delivering real value to customers on a
+            regular basis, validating cross-functional collaboration via
+            specific feedback loops on every feature &amp;&nbsp;team.
+        </dd>
 
-    <h1>About the Principal</h1>
-    <figure class="headshot"><img src="img/bradford-headshot-square.jpg" alt="Bradford Fults’s head" width="180" height="180" /></figure>
-    <p>
-        My name is Bradford Fults and I have over 25 years of experience in
-        large-scale B2C and B2B enterprise organizations, in both
-        software-native and tech-enabled services businesses, and from the
-        smallest teams up to integrated cross-product portfolio delivery teams
-        of 1,000&nbsp;people.
-    </p>
-    <p>
-        I bring a sharp eye, effective practices, and proven teaching and change
-        management methods to achieve the lasting change you seek in your
-        business, all the way to the balance sheet. I am an accomplished leader
-        of organizations and technically-minded engineer, able to quickly assess
-        both people and systems and then to forecast and integrate the
-        capabilities of product &amp; engineering with the rest of
-        the&nbsp;business.
+        <dt>
+            &hellip;product managers &amp; designers <em>handing off</em> work
+            and not understanding its impact?
+        </dt>
+        <dd>
+            We can team up to ensure that your teams are working together, all
+            invested in the same outcomes and all learning from the same
+            customer feedback and behavior, creating a feedback loop for great
+            customer impact and team investment.
+        </dd>
+
+        <dt>
+            &hellip;developers always complaining about tech debt without any
+            realistic solution in sight?
+        </dt>
+        <dd>
+            We can partner to create a technical vision matching your overall
+            product vision, and use that to prioritize a specific,
+            outcome-driven technical roadmap that addresses the biggest pain
+            points of developer&nbsp;productivity.
+        </dd>
+    </dl>
+
+    <p class="call-to-action">
+        <a href="https://calendly.com/bfults/praxis-intro" target="_blank">Get in Touch</a>
     </p>
 
     <h1>Approach</h1>
@@ -55,6 +66,13 @@ layout: default
             the&nbsp;business.
         </li>
     </ul>
+
+    <aside class="punch-line">
+        <p>
+            Transform &amp; optimize your product teams to deliver the right
+            products to your customers, quickly and repeatably.
+        </p>
+    </aside>
 
     <h1>Services</h1>
     <div class="two-columns">
@@ -108,4 +126,27 @@ layout: default
             <p></p>
         </section>
     </div>
-</div>
+
+    <p class="call-to-action">
+        <a href="https://calendly.com/bfults/praxis-intro" target="_blank">Get in Touch</a>
+    </p>
+
+    <h1>About the Principal</h1>
+    <figure class="headshot"><img src="img/bradford-headshot-square.jpg" alt="Bradford Fults’s head" width="180" height="180" /></figure>
+    <p>
+        My name is Bradford Fults and I have over 25 years of experience in
+        large-scale B2C and B2B enterprise organizations, in both
+        software-native and tech-enabled services businesses, and from the
+        smallest teams up to integrated cross-product portfolio delivery teams
+        of 1,000&nbsp;people.
+    </p>
+    <p>
+        I bring a sharp eye, effective practices, and proven teaching and change
+        management methods to achieve the lasting change you seek in your
+        business, all the way to the balance sheet. I am an accomplished leader
+        of organizations and technically-minded engineer, able to quickly assess
+        both people and systems and then to forecast and integrate the
+        capabilities of product &amp; engineering with the rest of
+        the&nbsp;business.
+    </p>
+</article>
