--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@ layout: default
         I bring a sharp eye, effective practices, and proven teaching and change
         management methods to achieve the lasting change you seek in your
         business, all the way to the balance sheet. I am an accomplished leader
-        of organizations and technically-minded engineer, able to quickly assess
-        both people and systems and then to forecast and integrate the
+        of organizations and a technically-minded engineer, able to quickly
+        assess both people and systems and then to forecast and integrate the
         capabilities of product &amp; engineering with the rest of
         the&nbsp;business.
     </p>
